Combined arduino control with curve editor

--- a/websockets/json-serial-bridge/package.json
+++ b/websockets/json-serial-bridge/package.json
@@ -10,6 +10,7 @@
     "eslint": "^5.4.0"
   },
   "dependencies": {
+    "@mojs/curve-editor": "^1.5.0",
     "body-parser": "~1.19.0",
     "chalk": "^2.4.2",
     "commander": "^3.0.1",
@@ -19,11 +20,15 @@
     "express": "~4.17.0",
     "express-ws": "^4.0.0",
     "middleware-static-livereload": "1.2.7",
-    "morgan": "~1.9.0",
+    "mo-js": "^0.288.2",
+    "mojs": "^0.2.0",
+    "morgan": "^1.9.1",
     "node-dev": "^4.0.0",
     "pug": "2.0.3",
     "serialport": "^7.1.5",
     "serve-favicon": "~2.5.0",
+    "svg-path-properties": "^0.5.2",
+    "webpack": "^4.41.0",
     "ws": "^7.1.2"
   }
 }
